[package]
name = "k6u"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0.x"
chrono = "0.4.x"
env_logger = "0.11.x"
futures = "0.3.x"
if-addrs = "0.14.x"
ipnet = "2.11.x"
k8s-openapi = { version = "0.25.0", features = ["latest"] }
kube = { version = "1.1.0", features = ["runtime", "derive", "jsonpatch"] }
kube-leader-election = "0.41.x"
log = "0.4.x"
rand = "0.9.x"
schemars = "0.8.x"
serde = "1.0.x"
serde_json = "1.0.x"
signal-hook = "0.3.x"
signal-hook-tokio = { version = "0.3.x", features = ["futures-v0_3"] }
tokio = { version = "1.46.x", features = ["full"] }
