[package]
name = "k6u"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.x"
chrono = "0.4.x"
env_logger = "0.11.x"
futures = "0.3.x"
if-addrs = "0.15.x"
ipnet = "2.11.x"
k8s-openapi = { version = "0.27.0", features = ["v1_34"] }
kube = { version = "2.0.*", features = ["runtime", "derive", "jsonpatch"] }
kube-leader-election = "0.43.0"
log = "0.4.x"
rand = "0.10.x"
schemars = "1.2.*"
serde = "1.0.x"
serde_json = "1.0.x"
signal-hook = "0.4.x"
signal-hook-tokio = { version = "0.4.x", features = ["futures-v0_3"] }
tokio = { version = "1.49.x", features = ["full"] }
